--- a/codebase/android/build.gradle
+++ b/codebase/android/build.gradle
@@ -1,14 +1,18 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
+        maven { url 'https://maven.google.com' }
+        maven { url "$rootDir/../node_modules/react-native/android" }
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.firebase:perf-plugin:1.3.1'
+        classpath "com.android.tools.build:gradle:4.2.1"
         classpath 'com.google.gms:google-services:4.3.10'
+
     }
 }
 
@@ -28,3 +32,5 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'com.google.gms.google-services'
