--- a/codebase/pubspec.yaml
+++ b/codebase/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^3.1.3
   google_sign_in: ^5.1.1
   provider: ^6.0.1
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_test:
