--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.3
+  google_sign_in: ^5.1.1
+  provider: ^6.0.1
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_test:
