--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_sign_in: ^5.1.1
   provider: ^6.0.1
   font_awesome_flutter: ^9.1.0
+  firebase_core: ^1.7.0
+  google_api_availability: ^3.0.1
+  firebase_database: ^8.0.0
+  flutter_svg: ^0.23.0+1
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -77,10 +81,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: iransans
+      fonts:
+        - asset: assets/fonts/iransans.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
