--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   translator: ^0.1.7
   persian_number_utility: ^0.3.4
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
