setting up dio services

--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   translator: ^0.1.7
   persian_number_utility: ^0.3.4
   flutter_rating_bar: ^4.0.0
+  dio: ^4.0.1
 
 dev_dependencies:
   flutter_test:
