--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   persian_number_utility: ^0.3.4
   flutter_rating_bar: ^4.0.0
   dio: ^4.0.1
+  cloud_firestore: ^3.1.0
 
 dev_dependencies:
   flutter_test:
