--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   dio: ^4.0.1
   cloud_firestore: ^3.1.0
+  percent_indicator: ^3.4.0
+  shamsi_date: ^1.0.0
+  wheel_chooser: ^1.0.0
 
 dev_dependencies:
   flutter_test:
