--- a/bookmark_codebase/pubspec.yaml
+++ b/bookmark_codebase/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   percent_indicator: ^3.4.0
   shamsi_date: ^1.0.0
   wheel_chooser: ^1.0.0
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
